[tool.poetry]
name = "pycounts_ts_mds"
version = "0.1.0"
description = "A short test package that counts the words in a given file."
authors = ["Timothy Singh"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
